# oa-forge

./: Cargo.toml  README.md  cliff.toml  config.d.ts  config.js  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
crates/cli/: CHANGELOG.md  Cargo.toml
crates/cli/benches/: codegen.rs
crates/cli/src/: main.rs
crates/cli/tests/: integration.rs
crates/emitter-angular/: CHANGELOG.md  Cargo.toml
crates/emitter-angular/src/: lib.rs
crates/emitter-angular/tests/: snapshots.rs
crates/emitter-angular/tests/snapshots/: snapshots__snapshot_allof_conflict_angular.snap  snapshots__snapshot_anyof_plain_angular.snap  snapshots__snapshot_coverage_gaps_angular.snap  snapshots__snapshot_edge_cases_angular.snap  snapshots__snapshot_error_responses_angular.snap  snapshots__snapshot_header_cookie_params_angular.snap  snapshots__snapshot_inline_schemas_angular.snap  snapshots__snapshot_large_scale_angular.snap  snapshots__snapshot_multipart_paginated_angular.snap  snapshots__snapshot_openapi31_angular.snap  snapshots__snapshot_petstore_angular.snap  snapshots__snapshot_reserved_keywords_angular.snap
crates/emitter-axios/: CHANGELOG.md  Cargo.toml
crates/emitter-axios/src/: lib.rs
crates/emitter-axios/tests/: snapshots.rs
crates/emitter-axios/tests/snapshots/: snapshots__snapshot_allof_conflict_axios.snap  snapshots__snapshot_anyof_plain_axios.snap  snapshots__snapshot_coverage_gaps_axios.snap  snapshots__snapshot_edge_cases_axios.snap  snapshots__snapshot_error_responses_axios.snap  snapshots__snapshot_header_cookie_params_axios.snap  snapshots__snapshot_inline_schemas_axios.snap  snapshots__snapshot_large_scale_axios.snap  snapshots__snapshot_multipart_paginated_axios.snap  snapshots__snapshot_openapi31_axios.snap  snapshots__snapshot_petstore_axios.snap  snapshots__snapshot_reserved_keywords_axios.snap
crates/emitter-client/: CHANGELOG.md  Cargo.toml
crates/emitter-client/src/: lib.rs
crates/emitter-client/tests/: snapshots.rs
crates/emitter-client/tests/snapshots/: snapshots__snapshot_additional_props_client.snap  snapshots__snapshot_allof_conflict_client.snap  snapshots__snapshot_anyof_plain_client.snap  (+13 more)
crates/emitter-hono/: CHANGELOG.md  Cargo.toml
crates/emitter-hono/src/: lib.rs
crates/emitter-hono/tests/: snapshots.rs
crates/emitter-hono/tests/snapshots/: snapshots__snapshot_allof_conflict_hono.snap  snapshots__snapshot_anyof_plain_hono.snap  snapshots__snapshot_coverage_gaps_hono.snap  snapshots__snapshot_edge_cases_hono.snap  snapshots__snapshot_error_responses_hono.snap  snapshots__snapshot_header_cookie_params_hono.snap  snapshots__snapshot_inline_schemas_hono.snap  snapshots__snapshot_large_scale_hono.snap  snapshots__snapshot_multipart_paginated_hono.snap  snapshots__snapshot_openapi31_hono.snap  snapshots__snapshot_petstore_hono.snap  snapshots__snapshot_reserved_keywords_hono.snap
crates/emitter-mock/: CHANGELOG.md  Cargo.toml
crates/emitter-mock/src/: lib.rs
crates/emitter-mock/tests/: snapshots.rs
crates/emitter-msw/: Cargo.toml
crates/emitter-msw/src/: lib.rs
crates/emitter-msw/tests/: snapshots.rs
crates/emitter-query/: CHANGELOG.md  Cargo.toml
crates/emitter-query/src/: lib.rs
crates/emitter-query/tests/: snapshots.rs
crates/emitter-query/tests/snapshots/: snapshots__snapshot_additional_props_hooks.snap  snapshots__snapshot_allof_conflict_hooks.snap  snapshots__snapshot_anyof_plain_hooks.snap  snapshots__snapshot_coverage_gaps_hooks.snap  snapshots__snapshot_edge_cases_hooks.snap  snapshots__snapshot_error_responses_hooks.snap  snapshots__snapshot_header_cookie_params_hooks.snap  snapshots__snapshot_inline_schemas_hooks.snap  snapshots__snapshot_large_scale_hooks.snap  snapshots__snapshot_multipart_paginated_hooks.snap  snapshots__snapshot_openapi31_hooks.snap  snapshots__snapshot_petstore_hooks.snap  snapshots__snapshot_reserved_keywords_hooks.snap
crates/emitter-types/: CHANGELOG.md  Cargo.toml
crates/emitter-types/src/: lib.rs
crates/emitter-types/tests/: snapshots.rs
crates/emitter-valibot/: CHANGELOG.md  Cargo.toml
crates/emitter-valibot/src/: lib.rs
crates/emitter-valibot/tests/: snapshots.rs
crates/emitter-zod/: CHANGELOG.md  Cargo.toml
crates/emitter-zod/src/: lib.rs
crates/emitter-zod/tests/: snapshots.rs
crates/emitter-zod/tests/snapshots/: snapshots__snapshot_additional_props_zod.snap  snapshots__snapshot_allof_conflict_zod.snap  snapshots__snapshot_anyof_plain_zod.snap  snapshots__snapshot_coverage_gaps_zod.snap  snapshots__snapshot_edge_cases_zod.snap  snapshots__snapshot_error_responses_zod.snap  snapshots__snapshot_header_cookie_params_zod.snap  snapshots__snapshot_inline_schemas_zod.snap  snapshots__snapshot_large_scale_zod.snap  snapshots__snapshot_multipart_paginated_zod.snap  snapshots__snapshot_oneof_discriminator_zod.snap  snapshots__snapshot_openapi31_zod.snap  snapshots__snapshot_petstore_zod.snap  snapshots__snapshot_reserved_keywords_zod.snap
crates/formatter/: CHANGELOG.md  Cargo.toml
crates/formatter/src/: lib.rs
crates/ir/: CHANGELOG.md  Cargo.toml
crates/ir/src/: convert.rs  lib.rs  types.rs
crates/parser/: CHANGELOG.md  Cargo.toml
crates/parser/src/: lib.rs  openapi.rs  resolver.rs  swagger2.rs
docs/: TODO.md  orval-migration.md
npm/cli/: package.json
npm/cli-darwin-arm64/: package.json
npm/cli-darwin-x64/: package.json
npm/cli-linux-arm64/: package.json
npm/cli-linux-x64/: package.json
npm/cli-win32-x64/: package.json
npm/cli/scripts/: postinstall.js
scripts/: bench-compare.sh  bump-version.sh  changelog.sh
tests/fixtures/: additional-props.yaml  allof-conflict.yaml  allof-required.yaml  anyof-plain.yaml  circular-ref.yaml  coverage-gaps.yaml  edge-cases.yaml  error-responses.yaml  header-cookie-params.yaml  inline-schemas.yaml  large-scale.yaml  multipart-paginated.yaml  no-paths.yaml  no-schemas.yaml  oneof-discriminator.yaml  openapi31.yaml  petstore.yaml  reserved-keywords.yaml  swagger2-petstore.yaml
tests/fixtures/cross-file/: index.yaml  main.yaml  models.yaml
tests/typescript/: tsconfig.json
(+59 files in other folders)
