[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/parser",
    "crates/ir",
    "crates/emitter-types",
    "crates/emitter-client",
    "crates/emitter-query",
    "crates/formatter",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/paveg/oa-forge"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
notify = "7"
insta = { version = "1", features = ["yaml"] }
indexmap = { version = "2", features = ["serde"] }
