[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/parser",
    "crates/ir",
    "crates/emitter-types",
    "crates/emitter-client",
    "crates/emitter-query",
    "crates/emitter-zod",
    "crates/emitter-valibot",
    "crates/emitter-msw",
    "crates/emitter-mock",
    "crates/emitter-axios",
    "crates/emitter-hono",
    "crates/emitter-angular",
    "crates/formatter",
]

[workspace.package]
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/paveg/oa-forge"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
notify = "7"
insta = { version = "1", features = ["yaml"] }
indexmap = { version = "2", features = ["serde"] }
criterion = { version = "0.5", features = ["html_reports"] }
toml = "0.8"

# internal crates
oa-forge-parser = { version = "0.2.1", path = "crates/parser" }
oa-forge-ir = { version = "0.2.1", path = "crates/ir" }
oa-forge-formatter = { version = "0.2.1", path = "crates/formatter" }
oa-forge-emitter-types = { version = "0.2.1", path = "crates/emitter-types" }
oa-forge-emitter-client = { version = "0.2.1", path = "crates/emitter-client" }
oa-forge-emitter-query = { version = "0.2.1", path = "crates/emitter-query" }
oa-forge-emitter-zod = { version = "0.2.1", path = "crates/emitter-zod" }
oa-forge-emitter-valibot = { version = "0.2.1", path = "crates/emitter-valibot" }
oa-forge-emitter-msw = { version = "0.2.1", path = "crates/emitter-msw" }
oa-forge-emitter-mock = { version = "0.2.1", path = "crates/emitter-mock" }
oa-forge-emitter-axios = { version = "0.2.1", path = "crates/emitter-axios" }
oa-forge-emitter-hono = { version = "0.2.1", path = "crates/emitter-hono" }
oa-forge-emitter-angular = { version = "0.2.1", path = "crates/emitter-angular" }
