[package]
name = "oa-forge-emitter-angular"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Angular HttpClient emitter for oa-forge"

[dependencies]
oa-forge-ir = { workspace = true }

[dev-dependencies]
oa-forge-parser = { workspace = true }
oa-forge-ir = { workspace = true }
insta = { workspace = true }
