[package]
name = "oa-forge-emitter-hono"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Hono RPC type emitter for oa-forge"

[dependencies]
oa-forge-ir = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
oa-forge-parser = { workspace = true }
oa-forge-ir = { workspace = true }
insta = { workspace = true }
