[package]
name = "oa-forge-emitter-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "TanStack Query hooks emitter for oa-forge"

[dependencies]
oa-forge-ir = { workspace = true }

[dev-dependencies]
oa-forge-parser = { workspace = true }
oa-forge-ir = { workspace = true }
insta = { workspace = true }
