[package]
name = "oa-forge-parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
