[package]
name = "oa-forge-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenAPI 3.0/3.1 parser with $ref resolution for oa-forge"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
